# openstack-entrypoint

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  setup.cfg
doc/source/: conf.py  index.rst  installation.rst  usage.rst
openstack-entrypoint/: __init__.py
openstack-entrypoint/tests/: test_openstack-entrypoint.py
releasenotes/source/: conf.py  index.rst
