[metadata]
name = openstack-entrypoint
summary = Utility for OpenStack Service Bootstrapping and Environment Sanity Checking
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    openstack-entrypoint

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = openstack-entrypoint/locale
domain = openstack-entrypoint

[update_catalog]
domain = openstack-entrypoint
output_dir = openstack-entrypoint/locale
input_file = openstack-entrypoint/locale/openstack-entrypoint.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = openstack-entrypoint/locale/openstack-entrypoint.pot
